<resources>
    <string name="app_name">Android Learner</string>
    <string name="intro_desc">Start on your Android journey here!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Placeholder</string>

    <string name="journey">Start your Android Journey!</string>

    /* Navigation Strings */
    <string name="nav_main_menu">Main Menu</string>
    <string name="nav_tutorials">Tutorials</string>
    <string name="nav_quizzes">Quiz</string>
    <string name="nav_notes">Review Notes</string>

    /* Quiz Fragment */
    <string name="select_quiz">Select a Quiz!</string>
    <string name="quiz1">Basic Android Quiz</string>
    <string name="quiz2">Intent Quiz</string>
    <string name="quiz3">Calculator Quiz</string>
    <string name="quiz4">SQLite Quiz</string>

    /* Quiz Activity*/
    <string name="question_to_answer">Question to answer:</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_c">C</string>
    <string name="button_d">D</string>
    <string name="score">Score:</string>
    <string name="default_value">0/0</string>
    <string name="quit_button">Exit to Main Menu</string>

    /* Highest Score Activity */
    <string name="current_score">Your score:</string>
    <string name="highest_score">Highest Score:</string>
    <string name="try_again">Try Again</string>
    <string name="return_button">Return to Main Menu</string>

    /* Tutorial Descriptions */
    <string name="tutorial1">Introduction to Android Studio: Learning how to create an empty app</string>
    <string name="tutorial2">Intent and Activity: Interaction within an Android app</string>
    <string name="tutorial3">Build your very first calculator app from scratch using Android Studio!</string>
    <string name="tutorial4">Creating Database and Tables using SQLite in Android Studio</string>
    <string name="tutorial5">Using Google Maps API in Android</string>

    /* Tutorial Video Activity */
    <string name="footnotes">Footnotes</string>
    <string name="save">Save</string>

    /* Notes Fragment Buttons */
    <string name="view_notes">View your Tutorial Notes here!</string>
    <string name="btn_note1">View Tutorial 1 Notes</string>
    <string name="btn_note2">View Tutorial 2 Notes</string>
    <string name="btn_note3">View Tutorial 3 Notes</string>
    <string name="btn_note4">View Tutorial 4 Notes</string>
    <string name="btn_note5">View Tutorial 5 Notes</string>

</resources>
