<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chuak.projectapplication.NotesFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_note_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_note1" />

        <Button
            android:id="@+id/btn_note_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_note2" />

        <Button
            android:id="@+id/btn_note_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_note3" />

        <Button
            android:id="@+id/btn_note_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_note4" />

        <Button
            android:id="@+id/btn_note_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_note5" />

    </LinearLayout>

</FrameLayout>
