<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/quizBackground"
    tools:context="com.example.chuak.projectapplication.Quiz1Activity">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="4dp"
        android:text="@string/question_to_answer"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textStyle="normal|bold" />


    <Button
        android:id="@+id/choice1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="@string/button_a"
        android:textColor="#000000" />

    <Button
        android:id="@+id/choice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="@string/button_b"
        android:textColor="#000000" />

    <Button
        android:id="@+id/choice3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="@string/button_c"
        android:textColor="#000000" />

    <Button
        android:id="@+id/choice4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="onClick"
        android:padding="8dp"
        android:text="@string/button_d"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="1dp">

        <TextView
            android:id="@+id/score_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:gravity="center_horizontal"
            android:text="@string/score"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium" />

        <TextView
            android:id="@+id/score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:gravity="center_horizontal"
            android:text="@string/default_value"
            android:textAppearance="@android:style/TextAppearance.Large" />

    </LinearLayout>

    <Button
        android:id="@+id/quit_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/quit_button"
        android:textColor="@color/colorTitle" />

</LinearLayout>

