<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_quizzes"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.example.chuak.projectapplication.QuizMenuFragment">


    <TextView
        android:id="@+id/select_quiz"
        android:typeface="serif"
        android:text="@string/select_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="20sp"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0091EA"
        android:text="@string/quiz1"
        android:layout_marginBottom="20sp"
        android:textColor="#fff" />

    <Button
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz2"
        android:background="#0091EA"
        android:layout_marginBottom="20sp"
        android:textColor="#fff" />

    <Button
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0091EA"
        android:textColor="#fff"
        android:layout_marginBottom="20sp"
        android:text="@string/quiz3" />

    <Button
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz4"
        android:background="#0091EA"
        android:textColor="#fff" />

</LinearLayout>
