<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_menu"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_main_menu" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_tutorials" />
        <item
            android:id="@+id/nav_quizzes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_quizzes" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
