<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_highest_score"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/quizBackground"
    tools:context="com.example.chuak.projectapplication.HighestScoreActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:text="@string/current_score"
            android:layout_marginTop="100dp"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:id="@+id/textScore"
            android:background="@android:color/holo_orange_light"
            android:padding="@dimen/activity_vertical_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:text="@string/highest_score"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@color/colorAccent"
            android:id="@+id/textHighScore"

            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <Button
            android:id="@+id/retry_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/try_again"
            android:textColor="#797D7F"
            android:background="@drawable/button_border" />

        <Button
            android:id="@+id/return_button"
            android:background="@android:color/holo_red_light"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/quit_button"
            android:textColor="@color/colorTitle"/>

    </LinearLayout>

</RelativeLayout>
